# guiduck

./: .gitignore  Dockerfile  LICENSE  bot.py  config.py  flake.nix  pyproject.toml
.github/workflows/: docker-image.yaml  docker-image.yml
cogs/: 1_mil_giveaway.py  __init__.py  afk.py  auto_lock_threads.py  automod.py  autopost.py  bot.py  collectors.py  data.py  forms.py  giveaways.py  help.py  help_desk.py  info.py  levels.py  logging.py  moderation.py  mongo.py  names.py  outline.py  pins.py  poketwo_administration.py  pricecheck.py  reaction_roles.py  redis.py  reminders.py  reputation.py  role_sync.py  tags.py  utility.py
helpers/: checks.py  constants.py  context.py  converters.py  formats.py  pagination.py  poketwo.py  time.py  utils.py
helpers/outline/: __init__.py  checks.py  client.py  constants.py  converters.py  decorators.py  errors.py  exceptions.py  http.py  pagination.py  utils.py
helpers/outline/models/: search_result.py
outline_api_wrapper/: __init__.py  client.py  constants.py  errors.py  utils.py
outline_api_wrapper/models/: collection.py  document.py  search_result.py  user.py
