[tool.poetry]
name = "poketwo-support"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
motor = "^2.3.0"
jishaku = { git = "https://github.com/Gorialis/jishaku.git" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus.git" }
dnspython = "^2.0.0"
discord-ext-events = { git = "https://github.com/oliver-ni/discord-ext-events", rev = "patch-1" }
durations-nlp = "^1.0.1"
aioredis = "^1.3.1"
discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views.git" }
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "b2929513cc63626f03b1c993b5a9b0109d60240b" }

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", allow-prereleases = true }

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
