[tool.poetry]
name = "poketwo-support"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.5.0"
jishaku = { git = "https://github.com/Gorialis/jishaku.git" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus.git" }
dnspython = "^2.0.0"
discord-ext-events = { git = "https://github.com/oliver-ni/discord-ext-events", rev = "patch-1" }
durations-nlp = "^1.0.1"
aioredis = "^1.3.1"
discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views.git" }
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
"discord.py" = { git = "https://github.com/poketwo/discord.py.git" }
httpx = "^0.25.0"
authlib = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
